@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>es.redmic.atlas</groupId>
 		<artifactId>atlas</artifactId>
-		<version>0.2.0</version>
+		<version>0.3.0</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -18,7 +18,7 @@
 	<properties>
 		<redmic.commands-lib.version>0.10.0</redmic.commands-lib.version>
 		<redmic.user-settings-lib.version>0.2.0</redmic.user-settings-lib.version>
-		
+
 		<mapstruct.version>1.3.0.Final</mapstruct.version>
 	</properties>
 
@@ -73,7 +73,7 @@
 			<version>${redmic.test-utils.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>es.redmic.lib</groupId>
 			<artifactId>commands-lib</artifactId>
@@ -81,7 +81,7 @@
 			<type>test-jar</type>
   			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>es.redmic.atlas</groupId>
 			<artifactId>atlas-lib</artifactId>
@@ -89,7 +89,7 @@
 			<type>test-jar</type>
   			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>es.redmic.lib</groupId>
 			<artifactId>user-settings-lib</artifactId>
@@ -113,6 +113,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
 					<includes>
 						<include>**/Test*.java</include>
 						<include>**/*Test.java</include>
